# RivalQt

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: main.cpp  mainwindow.ui
